--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -15,11 +15,31 @@ h2 a:hover, h1 a:hover{
 .page-header{
   background-color: #ae6bc9;
   padding:3%;
-  margin-bottom:2%;
+  padding-right: 4%;
+  margin-top: 0;
+  margin-bottom: 3%;
 }
 .date{
-  float:right;
+float:right;
 }
 .post{
   margin-bottom: 10%;
+}
+.save{
+  float:right;
+}
+
+.menu, .menu:hover{
+  color: #ffffff;
+  float: right;
+  font-size: 200%;
+  padding-right: 5%;
+}
+.add, .add:hover{
+  float:right;
+  color:#000;
+
+}
+.post-form textarea, .post-form input {
+    width: 100%;
 }
