--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,17 +2,23 @@
 <html>
     <head>
       <title>Ray's blog</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">Ray's Blog</a></h1>
+          {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="menu"><span class="fa fa-plus"></span></a>
+          {% endif %}
+          <h1><a href="/">Ray's Blog</a></h1>
+
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
             {% block content %}
             {% endblock %}
           </div>
